# clipboard-manager

./: .gitignore  CLAUDE.md  package-lock.json  package.json
docs/superpowers/plans/: 2026-04-01-clipboard-manager-implementation.md  2026-04-12-v0.2.0-menu-bar.md  2026-07-08-clipboard-ui-refactor.md
docs/superpowers/specs/: 2026-04-01-clipboard-manager-design.md  2026-04-12-v0.2.0-menu-bar-design.md  2026-07-08-clipboard-ui-refactor-design.md
src/: App.tsx  Settings.tsx  ShortcutSettings.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/clipboard/: macos.rs  mod.rs  windows.rs
src-tauri/src/storage/: mod.rs  models.rs
src/components/: ClipboardList.tsx  ClipboardRow.tsx  EmptyState.tsx  FilterChips.tsx  Icon.tsx  SearchBar.tsx
src/hooks/: useKeyboardNav.ts
src/lib/: format.ts  theme.ts
src/stores/: ClipboardStore.ts
